# exp-orchestrator

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  liveblocks.config.ts  page.tsx
backend/: .env.example  README.md  TODO.md  __init__.py  allocator.py  allowlist.py  broker_admin.py  broker_health.py  corelink_admin.py  corelink_health.py  dag.py  deployment.py  docker-compose.yml  docker_utils.py  dockerhub.py  executor.py  fetcher.py  health.py  inventory.py  logging_config.py  main.py  planner.py  plugin_validation.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  run.sh  signature.py  test_corelink_deploy.py  test_deploy.py  transforms.py  validate_workflow_cli.py  workflow_types.py
backend/config/: allowed_images.json  server_inventory.json
backend/docs/: BACKEND_ORGANIZATION.md  DEPLOYMENT.md
backend/executors/: __init__.py  base.py  ecs.py  local.py  noop.py
backend/tests/: test_allocator.py  test_allowlist_executor.py  test_broker_admin.py  test_broker_health.py  test_corelink_admin.py  test_corelink_health.py  test_deployment_planner.py  test_docker_plugin.py  test_docker_receiver.py  test_docker_sender.py  test_dockerhub.py  test_executors.py  test_frontend_payload.py  test_health.py  test_inventory.py  test_logging_config.py  test_main_broker.py  test_main_corelink.py  test_plugin_validation.py  test_validate_and_status.py
control_plane/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
docker_images/: README.md
docs/: auth-and-projects.md  demo-flow.md  (+1 more)
(+165 files in other folders)
